GearsetPOC/force-app/main/default/objects/TMC_Archive__c/TMC_Archive__c.object-meta.xml
<CustomObject>
    <label>TMC Archive</label>
    <nameField>
        <displayFormat>TMCa-{0000}</displayFormat>
        <label>Archive</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMC Archive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>