GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/BE__c.field-meta.xml
<CustomField>
    <fullName>BE__c</fullName>
    <label>BE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>