GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/BE_TMC__c.field-meta.xml
<CustomField>
    <fullName>BE_TMC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BE TMC</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>TMC Archive (BE TMC)</relationshipLabel>
    <relationshipName>TMC_Archive3</relationshipName>
    <type>Lookup</type>
</CustomField>