GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>TMC Archive</relationshipLabel>
    <relationshipName>TMC_Archive</relationshipName>
    <type>Lookup</type>
</CustomField>