GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/Distribution_System__c.field-meta.xml
<CustomField>
    <fullName>Distribution_System__c</fullName>
    <label>Distribution System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>