GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/FR__c.field-meta.xml
<CustomField>
    <fullName>FR__c</fullName>
    <label>FR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>