GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/FR_TMC__c.field-meta.xml
<CustomField>
    <fullName>FR_TMC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FR TMC</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>TMC Archive (FR TMC)</relationshipLabel>
    <relationshipName>TMC_Archive2</relationshipName>
    <type>Lookup</type>
</CustomField>