GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/NL__c.field-meta.xml
<CustomField>
    <fullName>NL__c</fullName>
    <label>NL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>