GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/Percent_Add__c.field-meta.xml
<CustomField>
    <fullName>Percent_Add__c</fullName>
    <label>%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>