GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/SBT__c.field-meta.xml
<CustomField>
    <fullName>SBT__c</fullName>
    <label>SBT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>