GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/SBT_Formula__c.field-meta.xml
<CustomField>
    <fullName>SBT_Formula__c</fullName>
    <formula>IF(NOT(ISBLANK(  UK_TMC__c  )),    UK__c   ,
IF(NOT(ISBLANK(  FR_TMC__c  )),   FR__c ,
IF(NOT(ISBLANK(  BE_TMC__c  )),   BE__c ,  
IF(NOT(ISBLANK(   TMC_Additional__c  )),     SBT__c   ,  NL__c 

)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBT</label>
    <type>Text</type>
</CustomField>