GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/TMC__c.field-meta.xml
<CustomField>
    <fullName>TMC__c</fullName>
    <formula>IF(NOT(ISBLANK(  UK_TMC__c  )),  UK_TMC__r.Name,
IF(NOT(ISBLANK(  FR_TMC__c  )),  FR_TMC__r.Name,
IF(NOT(ISBLANK(  BE_TMC__c  )),  BE_TMC__r.Name,
IF(NOT(ISBLANK(   TMC_Additional__c  )),   TMC_Additional__r.Name , NL_TMC__r.Name

)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMC</label>
    <type>Text</type>
</CustomField>