GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/TMC_Additional__c.field-meta.xml
<CustomField>
    <fullName>TMC_Additional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMC</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>TMC Archive (TMC)</relationshipLabel>
    <relationshipName>TMC_Archive5</relationshipName>
    <type>Lookup</type>
</CustomField>