GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/UK__c.field-meta.xml
<CustomField>
    <fullName>UK__c</fullName>
    <label>UK</label>
    <length>100</length>
    <type>Text</type>
</CustomField>