GearsetPOC/force-app/main/default/objects/TMC_Archive__c/fields/UK_TMC__c.field-meta.xml
<CustomField>
    <fullName>UK_TMC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UK TMC</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>TMC Archive (UK TMC)</relationshipLabel>
    <relationshipName>TMC_Archive1</relationshipName>
    <type>Lookup</type>
</CustomField>