GearsetPOC/force-app/main/default/objects/TMC_Archive__c/recordTypes/Additional.recordType-meta.xml
<RecordType>
    <fullName>Additional</fullName>
    <active>true</active>
    <label>Additional</label>
</RecordType>