GearsetPOC/force-app/main/default/objects/TMC_Archive__c/recordTypes/BE.recordType-meta.xml
<RecordType>
    <fullName>BE</fullName>
    <active>true</active>
    <label>BE</label>
</RecordType>