GearsetPOC/force-app/main/default/objects/TMC_Archive__c/recordTypes/NL.recordType-meta.xml
<RecordType>
    <fullName>NL</fullName>
    <active>true</active>
    <label>NL</label>
</RecordType>